[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = ["embedded", "no-std"]
description = "EEPROM emulation on top of FLASH for STM32"
repository = "https://github.com/idubrov/eeprom"
name = "eeprom"
version = "0.1.1-alpha.0"
license = "MIT/Apache-2.0"
readme = "README.md"

[package.metadata.release]
pre-release-hook = "./update-readme.sh"

[dependencies.stm32-hal]
version = "0.2.0"

[dev-dependencies.pretty_assertions]
version = "0.3.4"

[dependencies.stm32f103xx]
optional = true
version = "0.7.5"

[features]
default = ["default-eeprom"]
default-eeprom = []
use-stm32f103xx = ["stm32-hal/use-stm32f103xx", "stm32f103xx"]
