[package]
authors = ["Ivan Dubrov <dubrov.ivan@gmail.com>"]
categories = ["embedded", "no-std"]
description = "EEPROM emulation on top of FLASH for STM32"
documentation = "https://docs.rs/eeprom"
repository = "https://github.com/idubrov/eeprom"
name = "eeprom"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"

[package.metadata.release]
pre-release-hook = "./update-readme.sh"

[dependencies]
stm32f1xx-hal = {version = "0.9.0", features = [ "stm32f103" ], optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
stm32f103 = ["stm32f1xx-hal", "stm32f1xx-hal/stm32f103"]
